Minor fixes and adjustments

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                 <label id="moreDataLabel">Loading...</label>
             </td>
             <td class="pl-5 align-top">
-                <label class="h2">Melody</label>
+                <label class="h2" id="selectedMelodyName">Melody</label>
                 <div class="w-100 mb-3">
                     <canvas id="fftCanvas" class="w-100 fft-canvas"></canvas>
                 </div>
