--- a/Web/Areas/Administration/Views/Melody/EditorTemplates/MelodyModel.cshtml
+++ b/Web/Areas/Administration/Views/Melody/EditorTemplates/MelodyModel.cshtml
@@ -3,7 +3,7 @@
     and rendered by @Html.EditorForModel() that looks for identical model editor.
 *@
 
-@model Xiphos.Areas.Administration.Models.MelodyModel
+@model Xiphos.Data.Models.MelodyModel
 
 <table class="table table-dark">
     <tbody>
