--- a/Web/Areas/Administration/Views/_ViewImports.cshtml
+++ b/Web/Areas/Administration/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 
 @using Xiphos
 @using Xiphos.Areas.Administration.Models
+@using Xiphos.Data.Models
 @using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
